# awg-fleet

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  cloudflare-access-admin.yml  deploy.yml  diagnose-panel-tls.yml
awgfleet/: __init__.py  bench.py  cli.py  clients.py  cloudflare.py  controller.py  health.py  keys.py  models.py  provision.py  render.py  ssh.py  state.py  stats.py  web.py
awgfleet/templates/: index.html
docs/: ARCHITECTURE.md
tests/: test_bench.py  test_controller.py  test_distribution.py  test_keys.py  test_pinning.py  test_render.py  test_single_domain.py  test_vpn.py  test_web_auth.py
